Updated turbine and pump design points

--- a/docs/fluidics/turbine_design.ipynb
+++ b/docs/fluidics/turbine_design.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "20a84c5b",
    "metadata": {},
    "outputs": [],
@@ -70,8 +70,8 @@
     "\n",
     "| Parameter        | Value      | Justification                                                                                                       |\n",
     "| ---------------- | ---------- | ------------------------------------------------------------------------------------------------------------------- |\n",
-    "| Shaft Speed      | 30,000 RPM | Based on the preliminary rotor dynamic analysis, advancing the shaft speed to 30,000 RPM was identified as feasible |\n",
-    "| Pump Power      | 4 kW       | This is the most up-to date pump power requirement                                                                  |\n",
+    "| Shaft Speed      | 24,000 RPM | Based on the preliminary rotor dynamic analysis, advancing the shaft speed to 30,000 RPM was identified as feasible |\n",
+    "| Pump Power      | 11 kW       | This is the most up-to date pump power requirement                                                                  |\n",
     "\n",
     "The following inputs from the gas-generator study have additionally been provided:\n",
     "\n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 295,
    "id": "a7480b50",
    "metadata": {},
    "outputs": [],
@@ -110,9 +110,9 @@
     "    \"R\": 504.5591863293963,\n",
     "    \"ox_stiffness\": 1.0,\n",
     "    \"fu_stiffness\": 1.0,\n",
-    "    \"m_dot_t\": np.float64(0.039124),\n",
-    "    \"m_dot_o\": np.float64(0.019562),\n",
-    "    \"m_dot_f\": np.float64(0.019562),\n",
+    "    'm_dot_t': 0.078376,\n",
+    "    'm_dot_o': 0.039188,\n",
+    "    'm_dot_f': 0.039188\n",
     "}\n",
     "\n",
     "\n",
@@ -128,35 +128,15 @@
     "\n",
     "\n",
     "dic_rotor = {\n",
-    "\n",
-    "\n",
     "    \"N_shaft\": 24e3,\n",
-    "\n",
-    "\n",
     "    \"u_cis\": 0.1,\n",
-    "\n",
-    "\n",
     "    \"Rt\": 13,\n",
-    "\n",
-    "\n",
     "    \"phi_n\": 0.85,\n",
-    "\n",
-    "\n",
     "    \"alpha\": 70,\n",
-    "\n",
-    "\n",
     "    \"delta_r\": 2e-3,\n",
-    "\n",
-    "\n",
-    "    \"N_nozzle\": 3,\n",
-    "\n",
-    "\n",
+    "    \"N_nozzle\": 5,\n",
     "    \"N_rotor\": 50,\n",
-    "\n",
-    "\n",
-    "    \"power\": 3.79 + 1.6\n",
-    "\n",
-    "\n",
+    "    \"power\": 10 + 0.4*4\n",
     "}"
    ]
   },
@@ -212,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 296,
    "id": "8b47ad02",
    "metadata": {},
    "outputs": [],
@@ -243,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 297,
    "id": "d330bd1f",
    "metadata": {},
    "outputs": [],
@@ -269,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 363,
    "id": "caa9128e",
    "metadata": {},
    "outputs": [],
@@ -283,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 364,
    "id": "f4ba80f6",
    "metadata": {},
    "outputs": [
@@ -303,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 365,
    "id": "0e680f66",
    "metadata": {},
    "outputs": [
@@ -311,10 +291,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current Error: 8.08874884658365 %\n",
-      "Current Error: 0.6028790819210864 %\n",
-      "Current Error: 0.048059551618165344 %\n",
-      "Current Error: 0.0038113084437079872 %\n"
+      "Current Error: 3.181060187462447 %\n",
+      "Current Error: 0.24635674255579423 %\n",
+      "Current Error: 0.019607174479071454 %\n",
+      "Current Error: 0.0015571622838256695 %\n"
      ]
     }
    ],
@@ -344,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 366,
    "id": "e5642279",
    "metadata": {},
    "outputs": [
@@ -352,7 +332,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Relative Error: -0.00 %\n"
+      "Relative Error: 0.00 %\n"
      ]
     }
    ],
@@ -374,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 362,
    "id": "cbd08159",
    "metadata": {},
    "outputs": [
@@ -383,7 +363,7 @@
       "text/latex": [
        "\\[\n",
        "\\begin{aligned}\n",
-       "m_{dot_{t}} &= 39.124 \\; \\;\\textrm{(g/s)}\n",
+       "m_{dot_{t}} &= 78.365 \\; \\;\\textrm{(g/s)}\n",
        "\\end{aligned}\n",
        "\\]"
       ],
@@ -419,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 367,
    "id": "31bafc1b",
    "metadata": {},
    "outputs": [],
@@ -463,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 368,
    "id": "98de5998",
    "metadata": {},
    "outputs": [
@@ -507,18 +487,18 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>853658.556771</td>\n",
-       "      <td>0.102034</td>\n",
-       "      <td>0.723142</td>\n",
-       "      <td>0.292475</td>\n",
-       "      <td>0.011443</td>\n",
-       "      <td>0.707525</td>\n",
+       "      <td>0.186426</td>\n",
+       "      <td>0.762287</td>\n",
+       "      <td>0.276188</td>\n",
+       "      <td>0.021644</td>\n",
+       "      <td>0.723812</td>\n",
        "      <td>0.85</td>\n",
-       "      <td>0.239521</td>\n",
-       "      <td>0.008085</td>\n",
-       "      <td>0.161382</td>\n",
-       "      <td>5389.956995</td>\n",
-       "      <td>5.389957</td>\n",
-       "      <td>2.058812</td>\n",
+       "      <td>0.245754</td>\n",
+       "      <td>0.004479</td>\n",
+       "      <td>0.1734</td>\n",
+       "      <td>11600.005438</td>\n",
+       "      <td>11.600005</td>\n",
+       "      <td>4.430876</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -526,13 +506,13 @@
       ],
       "text/plain": [
        "              dh       eps     phi_r     phi_l  m_leakage     eta_l   phi  \\\n",
-       "0  853658.556771  0.102034  0.723142  0.292475   0.011443  0.707525  0.85   \n",
+       "0  853658.556771  0.186426  0.762287  0.276188   0.021644  0.723812  0.85   \n",
        "\n",
-       "      eta_h  zeta_eps     eta_o        Power  Power (kW)  Torque (Nm)  \n",
-       "0  0.239521  0.008085  0.161382  5389.956995    5.389957     2.058812  "
+       "      eta_h  zeta_eps   eta_o         Power  Power (kW)  Torque (Nm)  \n",
+       "0  0.245754  0.004479  0.1734  11600.005438   11.600005     4.430876  "
       ]
      },
-     "execution_count": 162,
+     "execution_count": 368,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 369,
    "id": "17ddc9af",
    "metadata": {},
    "outputs": [
@@ -610,8 +590,8 @@
        "      <td>1.923077</td>\n",
        "      <td>10.439256</td>\n",
        "      <td>7.716615</td>\n",
-       "      <td>3.759009</td>\n",
-       "      <td>3.115758</td>\n",
+       "      <td>4.078946</td>\n",
+       "      <td>3.335242</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -619,10 +599,10 @@
       ],
       "text/plain": [
        "    p_0       p_1       p_1o    p_1o_r    p_2o_r      p_2o\n",
-       "0  25.0  1.923077  10.439256  7.716615  3.759009  3.115758"
+       "0  25.0  1.923077  10.439256  7.716615  4.078946  3.335242"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 369,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 370,
    "id": "ac285f90",
    "metadata": {},
    "outputs": [
@@ -679,8 +659,8 @@
        "      <td>868.169413</td>\n",
        "      <td>592.819489</td>\n",
        "      <td>811.099475</td>\n",
-       "      <td>696.953448</td>\n",
-       "      <td>776.886426</td>\n",
+       "      <td>684.260987</td>\n",
+       "      <td>774.510904</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -688,10 +668,10 @@
       ],
       "text/plain": [
        "          t_0         t_1      t_1o_r         t_2        t_2o\n",
-       "0  868.169413  592.819489  811.099475  696.953448  776.886426"
+       "0  868.169413  592.819489  811.099475  684.260987  774.510904"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 370,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 371,
    "id": "caeef526",
    "metadata": {},
    "outputs": [
@@ -718,7 +698,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Comparison of Throat Calculated using CEA: -0.1 %\n"
+      "Comparison of Throat Calculated using CEA: 100.2 %\n"
      ]
     },
     {
@@ -759,15 +739,15 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0.103979</td>\n",
-       "      <td>0.000055</td>\n",
-       "      <td>0.000016</td>\n",
-       "      <td>0.00482</td>\n",
-       "      <td>0.00732</td>\n",
-       "      <td>0.09666</td>\n",
-       "      <td>0.111299</td>\n",
-       "      <td>0.562327</td>\n",
-       "      <td>2.570089</td>\n",
-       "      <td>4.819565</td>\n",
+       "      <td>0.00011</td>\n",
+       "      <td>0.000031</td>\n",
+       "      <td>0.005284</td>\n",
+       "      <td>0.007784</td>\n",
+       "      <td>0.096196</td>\n",
+       "      <td>0.111763</td>\n",
+       "      <td>0.59797</td>\n",
+       "      <td>1.990783</td>\n",
+       "      <td>5.283509</td>\n",
        "      <td>3.518494</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -775,14 +755,14 @@
        "</div>"
       ],
       "text/plain": [
-       "        D_m       A_1       A_0      s_c      s_b    D_hub     D_tip  \\\n",
-       "0  0.103979  0.000055  0.000016  0.00482  0.00732  0.09666  0.111299   \n",
+       "        D_m      A_1       A_0       s_c       s_b     D_hub     D_tip  \\\n",
+       "0  0.103979  0.00011  0.000031  0.005284  0.007784  0.096196  0.111763   \n",
        "\n",
-       "         AR  Nozzle Throat (mm)  Nozzle Exit (mm)       eps  \n",
-       "0  0.562327            2.570089          4.819565  3.518494  "
+       "        AR  Nozzle Throat (mm)  Nozzle Exit (mm)       eps  \n",
+       "0  0.59797            1.990783          5.283509  3.518494  "
       ]
      },
-     "execution_count": 165,
+     "execution_count": 371,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 372,
    "id": "7ef77265",
    "metadata": {},
    "outputs": [
@@ -845,8 +825,8 @@
        "      <th>0</th>\n",
        "      <td>1.581765</td>\n",
        "      <td>1.457041</td>\n",
-       "      <td>1.053647</td>\n",
-       "      <td>0.852241</td>\n",
+       "      <td>1.110683</td>\n",
+       "      <td>0.905572</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -854,10 +834,10 @@
       ],
       "text/plain": [
        "   m_star_c1  m_star_w1  m_star_w2  m_star_c2\n",
-       "0   1.581765   1.457041   1.053647   0.852241"
+       "0   1.581765   1.457041   1.110683   0.905572"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 372,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 373,
    "id": "71bae886",
    "metadata": {},
    "outputs": [
@@ -910,8 +890,8 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>67.409767</td>\n",
-       "      <td>89.576215</td>\n",
-       "      <td>53.740581</td>\n",
+       "      <td>89.594112</td>\n",
+       "      <td>56.453617</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -919,10 +899,10 @@
       ],
       "text/plain": [
        "      beta_1     beta_2    alpha_2\n",
-       "0  67.409767  89.576215  53.740581"
+       "0  67.409767  89.594112  56.453617"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 373,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 374,
    "id": "a991ea29",
    "metadata": {},
    "outputs": [
@@ -984,9 +964,9 @@
        "      <td>1110.646935</td>\n",
        "      <td>988.872957</td>\n",
        "      <td>678.685921</td>\n",
-       "      <td>715.095329</td>\n",
-       "      <td>598.406826</td>\n",
-       "      <td>664.217857</td>\n",
+       "      <td>753.805099</td>\n",
+       "      <td>635.853327</td>\n",
+       "      <td>663.201574</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -994,13 +974,13 @@
       ],
       "text/plain": [
        "            u         c_1s          c_1         w_1    a_star_2         w_2  \\\n",
-       "0  130.664345  1306.643453  1110.646935  988.872957  678.685921  715.095329   \n",
+       "0  130.664345  1306.643453  1110.646935  988.872957  678.685921  753.805099   \n",
        "\n",
        "          c_2    a_star_3  \n",
-       "0  598.406826  664.217857  "
+       "0  635.853327  663.201574  "
       ]
      },
-     "execution_count": 168,
+     "execution_count": 374,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 375,
    "id": "ac87630f",
    "metadata": {},
    "outputs": [
@@ -1056,7 +1036,7 @@
        " 'M_e_margin': np.float64(0.1410810288639159)}"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 375,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1096,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 376,
    "id": "5e821599",
    "metadata": {},
    "outputs": [
@@ -1120,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 377,
    "id": "dfa83cbf",
    "metadata": {},
    "outputs": [
@@ -1134,7 +1114,7 @@
        "       177.77777778, 188.88888889, 200.        ])"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 377,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1153,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 378,
    "id": "3f9f5f36",
    "metadata": {},
    "outputs": [
@@ -1182,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 379,
    "id": "656aec2e",
    "metadata": {},
    "outputs": [
@@ -1211,17 +1191,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 380,
    "id": "c77d19fd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1ca8c29f190>]"
+       "[<matplotlib.lines.Line2D at 0x14ce5f19290>]"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 380,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1277,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 188,
    "id": "49cb0e4c",
    "metadata": {},
    "outputs": [
@@ -1287,7 +1267,7 @@
        "\\[\n",
        "\\begin{aligned}\n",
        "\\mathrm{acceptable} &= 1.000 \\; \n",
-       " &\\mathrm{Power} &= 5.391 \\;\n",
+       " &\\mathrm{Power} &= 11.602 \\;\n",
        "\\end{aligned}\n",
        "\\]"
       ],
