--- a/docs/fluidics/pump_design.ipynb
+++ b/docs/fluidics/pump_design.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "d118351c",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,9 @@
     "import numpy as np\n",
     "from turborocket.sizing.pump import Barske, DiffuserType\n",
     "from turborocket.fluids.fluids import IncompressibleFluid\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import handcalcs.render"
    ]
   },
   {
@@ -188,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "id": "73726650",
    "metadata": {},
    "outputs": [
@@ -210,7 +212,7 @@
        "Text(0.5, 1.0, 'Temperature History of System using a Valve w/ C_v: 0.18')"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -314,15 +316,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c4bd7148",
+   "metadata": {},
+   "source": [
+    "### 2.2 - Required Performance Metrics"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 64,
    "id": "90ef1133",
    "metadata": {},
    "outputs": [],
    "source": [
     "pump_dic = {\n",
-    "    \"dp\": 35e5,\n",
-    "    \"m_dot\": 0.3,\n",
+    "    \"dp\": 25e5,\n",
+    "    \"m_dot\": 1.1,\n",
     "    \"N\": 24e3 * (2*np.pi)/60\n",
     "}"
    ]
@@ -337,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 65,
    "id": "8ee7e758",
    "metadata": {},
    "outputs": [],
@@ -355,15 +365,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 66,
    "id": "7d6436ac",
    "metadata": {},
    "outputs": [],
    "source": [
     "pump_geo = {\n",
     "    \"fluid\": IPA,\n",
-    "    \"l_1\": 7e-3,\n",
-    "    \"l_2\": 3e-3,\n",
+    "    \"l_1\": 15e-3,\n",
+    "    \"l_2\": 10e-3,\n",
     "    \"v_0\": 3,\n",
     "    \"v_3f\": 0.61,\n",
     "    \"d_1f\": 1.3,\n",
@@ -372,6 +382,67 @@
     "    \"diffuser_type\": DiffuserType.rectangular,\n",
     "    \"psi\": 0.2,\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ba2b9c2",
+   "metadata": {},
+   "source": [
+    "We can also evaluate for our specific speed of the pump to compare it to others of similar geometry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "06f74c03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M3S_TO_GPM = 15850.323140625\n",
+    "g = 9.81\n",
+    "M_TO_FT = 3.28084"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "6652cf4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\[\n",
+       "\\begin{aligned}\n",
+       "Q &= 22.154 \\; \\;\\textrm{(gpm)}\n",
+       "\\\\[10pt]\n",
+       "H &= 1062.384 \\; \\;\\textrm{(ft)}\n",
+       "\\\\[10pt]\n",
+       "N &= 24000.000 \\; \\;\\textrm{(rpm)}\n",
+       "\\\\[10pt]\n",
+       "N_{s} &= \\frac{ N \\cdot \\left( Q \\right) ^{ \\left( \\frac{ 1 }{ 2 } \\right) } }{ \\left( H \\right) ^{ 0.75 } }  = \\frac{ 24000.000 \\cdot \\left( 22.154 \\right) ^{ \\left( \\frac{ 1 }{ 2 } \\right) } }{ \\left( 1062.384 \\right) ^{ 0.75 } } &= 607.055  \n",
+       "\\end{aligned}\n",
+       "\\]"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Latex object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%render\n",
+    "\n",
+    "Q = (pump_dic[\"m_dot\"]/pump_geo[\"fluid\"].get_density()) * M3S_TO_GPM # gpm\n",
+    "\n",
+    "H = pump_dic[\"dp\"]/(pump_geo[\"fluid\"].get_density() * g) * M_TO_FT # ft\n",
+    "\n",
+    "N = pump_dic[\"N\"] * 60/(2*np.pi) # rpm\n",
+    "\n",
+    "N_s = (N * (Q) ** (1 / 2)) / H ** (0.75)"
    ]
   },
   {
@@ -392,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 69,
    "id": "121fc8ca",
    "metadata": {},
    "outputs": [
@@ -436,20 +507,20 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>12.719431</td>\n",
-       "      <td>16.535261</td>\n",
-       "      <td>70.154269</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.701543</td>\n",
-       "      <td>3.507713</td>\n",
+       "      <td>24.355857</td>\n",
+       "      <td>31.662614</td>\n",
+       "      <td>64.715772</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.647158</td>\n",
+       "      <td>3.235789</td>\n",
        "      <td>DiffuserType.rectangular</td>\n",
-       "      <td>2.662419</td>\n",
-       "      <td>4.980929</td>\n",
-       "      <td>16.49706</td>\n",
+       "      <td>5.308038</td>\n",
+       "      <td>9.930431</td>\n",
+       "      <td>32.890029</td>\n",
        "      <td>3</td>\n",
-       "      <td>1.048305</td>\n",
-       "      <td>0.576529</td>\n",
+       "      <td>0.936764</td>\n",
+       "      <td>0.687477</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -457,28 +528,28 @@
       ],
       "text/plain": [
        "   Eye Diameter - d_0 (mm)  Inlet Diameter - d_1 (mm)  \\\n",
-       "0                12.719431                  16.535261   \n",
+       "0                24.355857                  31.662614   \n",
        "\n",
        "   Exit Diameter - d_2 (mm)  Entrance Axial Blade Length - l_1 (mm)  \\\n",
-       "0                 70.154269                                     7.0   \n",
+       "0                 64.715772                                    15.0   \n",
        "\n",
        "   Exit Axial Blade Legnth - l_2 (mm)  Axial Clearance - c_1 (mm)  \\\n",
-       "0                                 3.0                    0.701543   \n",
+       "0                                10.0                    0.647158   \n",
        "\n",
        "   Radial Clearance - c_2 (mm)             Diffuser Type  \\\n",
-       "0                     3.507713  DiffuserType.rectangular   \n",
+       "0                     3.235789  DiffuserType.rectangular   \n",
        "\n",
        "   Diffuser Throat - d_3 (mm)  Diffuser Exit - d_4 (mm)  \\\n",
-       "0                    2.662419                  4.980929   \n",
+       "0                    5.308038                  9.930431   \n",
        "\n",
        "   Diffuser Length - L (mm)  Inlet Eye Velocity - v_o (m/s)  \\\n",
-       "0                  16.49706                               3   \n",
+       "0                 32.890029                               3   \n",
        "\n",
        "   Impeller Inlet Velocity - v_1 (m/s)  Relative Exit Velocity - w_2 (m/s)  \n",
-       "0                             1.048305                            0.576529  "
+       "0                             0.936764                            0.687477  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 70,
    "id": "37fc1253",
    "metadata": {},
    "outputs": [
@@ -534,11 +605,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>453.340276</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>20.027844</td>\n",
-       "      <td>1.33418</td>\n",
-       "      <td>6.661628</td>\n",
+       "      <td>323.814483</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>35.934592</td>\n",
+       "      <td>3.494282</td>\n",
+       "      <td>9.724006</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -546,13 +617,13 @@
       ],
       "text/plain": [
        "   Head Rise (m)  Head Rise (Bar)  Efficiency (%)  Hydraulic Power (kW)  \\\n",
-       "0     453.340276             35.0       20.027844               1.33418   \n",
+       "0     323.814483             25.0       35.934592              3.494282   \n",
        "\n",
        "   Required Shaft Power (kW)  \n",
-       "0                   6.661628  "
+       "0                   9.724006  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
