--- a/docs/fluidics/reverse_engineering_beta_1.ipynb
+++ b/docs/fluidics/reverse_engineering_beta_1.ipynb
@@ -66,13 +66,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "65297ad7",
    "metadata": {},
    "outputs": [],
    "source": [
     "LB_TO_KG = 0.453592\n",
-    "PSI_TO_PA = 6894.76"
+    "PSI_TO_PA = 6894.76\n",
+    "M3S_TO_GPM = 15850.323140625\n",
+    "g = 9.81\n",
+    "M_TO_FT = 3.28084"
    ]
   },
   {
@@ -85,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "868d8243",
    "metadata": {},
    "outputs": [
@@ -130,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "ba79f268",
    "metadata": {},
    "outputs": [
@@ -174,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "f4388c7c",
    "metadata": {},
    "outputs": [
@@ -218,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "43a80206",
    "metadata": {},
    "outputs": [
@@ -267,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "35c9ee71",
    "metadata": {},
    "outputs": [
@@ -292,6 +295,232 @@
     "%%render\n",
     "\n",
     "eta_p = eta_o/0.25"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "655d4b4d",
+   "metadata": {},
+   "source": [
+    "## 4 - Pump Specific Speed Estimation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bddf9b58",
+   "metadata": {},
+   "source": [
+    "In order to get a better understanding of the pump operational points used by Barske, an investigation on the specific speed of the pump was performed.\n",
+    "\n",
+    "The following definition has been used:\n",
+    "\n",
+    "$$N_s = \\frac{N \\sqrt{Q}}{H^{0.75}}$$\n",
+    "\n",
+    "Where $N$ is the shaft speed in RPM, $Q$ is the volumetric flow rate of the pump in gallons perr minute and  is the head of the pump in feet."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de8b6987",
+   "metadata": {},
+   "source": [
+    "### 4.1 - Oxidiser Pump"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ca9875a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\[\n",
+       "\\begin{aligned}\n",
+       "N &= 24000 \\; \\;\\textrm{(rpm)}\n",
+       "\\\\[10pt]\n",
+       "Q &= \\left( \\frac{ m_{dot_{o}} }{ \\rho_{o} } \\right) \\cdot \\mathrm{M3S}_{TO_{GPM}}  = \\left( \\frac{ 3.461 }{ 1100 } \\right) \\cdot 15850.323 &= 49.870 \\; \\;\\textrm{(GPM)}\n",
+       "\\\\[10pt]\n",
+       "H &= \\left( \\frac{ p_{out_{o}} - p_{in_{o}} }{ \\rho_{o} \\cdot g } \\right) \\cdot M_{TO_{FT}}  = \\left( \\frac{ 2895799.200 - 117210.920 }{ 1100 \\cdot 9.810 } \\right) \\cdot 3.281 &= 844.788 \\; \\;\\textrm{(ft)}\n",
+       "\\\\[10pt]\n",
+       "N_{s_{ox}} &= \\frac{ N \\cdot \\left( Q \\right) ^{ \\left( \\frac{ 1 }{ 2 } \\right) } }{ \\left( H \\right) ^{ 0.75 } } \\\\&= \\frac{ 24000 \\cdot \\left( 49.870 \\right) ^{ \\left( \\frac{ 1 }{ 2 } \\right) } }{ \\left( 844.788 \\right) ^{ 0.75 } } \\\\&= 1081.604  \\\\[10pt]\n",
+       "\\end{aligned}\n",
+       "\\]"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Latex object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%render\n",
+    "\n",
+    "N = 24000 # rpm\n",
+    "\n",
+    "Q = (m_dot_o/rho_o) * M3S_TO_GPM # GPM\n",
+    "\n",
+    "H = ((p_out_o - p_in_o)/(rho_o * g)) * M_TO_FT # ft\n",
+    "\n",
+    "N_s_ox = (N*(Q)**(1/2))/H**(0.75)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2a5fe95",
+   "metadata": {},
+   "source": [
+    "### 4.2 - Fuel Pump"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "6645104a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\[\n",
+       "\\begin{aligned}\n",
+       "N &= 24000 \\; \\;\\textrm{(rpm)}\n",
+       "\\\\[10pt]\n",
+       "Q &= \\left( \\frac{ m_{dot_{f}} }{ \\rho_{f} } \\right) \\cdot \\mathrm{M3S}_{TO_{GPM}}  = \\left( \\frac{ 1.143 }{ 792 } \\right) \\cdot 15850.323 &= 22.876 \\; \\;\\textrm{(GPM)}\n",
+       "\\\\[10pt]\n",
+       "H &= \\left( \\frac{ p_{out_{f}} - p_{in_{f}} }{ \\rho_{f} \\cdot g } \\right) \\cdot M_{TO_{FT}}  = \\left( \\frac{ 2688956.400 - 117210.920 }{ 792 \\cdot 9.810 } \\right) \\cdot 3.281 &= 1085.973 \\; \\;\\textrm{(ft)}\n",
+       "\\\\[10pt]\n",
+       "N_{s_{fu}} &= \\frac{ N \\cdot \\left( Q \\right) ^{ \\left( \\frac{ 1 }{ 2 } \\right) } }{ \\left( H \\right) ^{ 0.75 } } \\\\&= \\frac{ 24000 \\cdot \\left( 22.876 \\right) ^{ \\left( \\frac{ 1 }{ 2 } \\right) } }{ \\left( 1085.973 \\right) ^{ 0.75 } } \\\\&= 606.787  \\\\[10pt]\n",
+       "\\end{aligned}\n",
+       "\\]"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Latex object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%render\n",
+    "\n",
+    "N = 24000 # rpm\n",
+    "\n",
+    "Q = (m_dot_f/rho_f) * M3S_TO_GPM # GPM\n",
+    "\n",
+    "H = ((p_out_f - p_in_f)/(rho_f * g))  * M_TO_FT # ft\n",
+    "\n",
+    "N_s_fu = (N*(Q)**(1/2))/H**(0.75)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dac610aa",
+   "metadata": {},
+   "source": [
+    "## 5 - Cryogenic Liquid Hydrogen Specific Speed Check"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e60e6f45",
+   "metadata": {},
+   "source": [
+    "Here we do a quick revere engineering of a liquid hydrogen pump that uses a barske impeller based on litterature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "76492ebf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\[\n",
+       "\\begin{aligned}\n",
+       "Q &= 1 \\cdot 15.850323140625 &= 15.850  \n",
+       "\\\\[10pt]\n",
+       "H &= 141.8 \\cdot M_{TO_{FT}}  = 141.8 \\cdot 3.281 &= 465.223  \n",
+       "\\\\[10pt]\n",
+       "N &= 15200 \\; \n",
+       "\\\\[10pt]\n",
+       "N_{s_{fu}} &= \\frac{ N \\cdot \\left( Q \\right) ^{ \\left( \\frac{ 1 }{ 2 } \\right) } }{ \\left( H \\right) ^{ 0.75 } }  = \\frac{ 15200 \\cdot \\left( 15.850 \\right) ^{ \\left( \\frac{ 1 }{ 2 } \\right) } }{ \\left( 465.223 \\right) ^{ 0.75 } } &= 604.111  \n",
+       "\\end{aligned}\n",
+       "\\]"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Latex object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%render\n",
+    "\n",
+    "Q = 1 * 15.850323140625\n",
+    "H = 141.8 * M_TO_FT\n",
+    "N = 15200\n",
+    "\n",
+    "N_s_fu = (N * (Q) ** (1 / 2)) / H ** (0.75)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9385f925",
+   "metadata": {},
+   "source": [
+    "Another check"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "999a7682",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\[\n",
+       "\\begin{aligned}\n",
+       "Q &= 8 \\cdot 4.4028675390625 &= 35.223  \n",
+       "\\\\[10pt]\n",
+       "H &= 420 \\cdot M_{TO_{FT}}  = 420 \\cdot 3.281 &= 1377.953  \n",
+       "\\\\[10pt]\n",
+       "N &= 10400 \\; \n",
+       "\\\\[10pt]\n",
+       "N_{s_{fu}} &= \\frac{ N \\cdot \\left( Q \\right) ^{ \\left( \\frac{ 1 }{ 2 } \\right) } }{ \\left( H \\right) ^{ 0.75 } } \\\\&= \\frac{ 10400 \\cdot \\left( 35.223 \\right) ^{ \\left( \\frac{ 1 }{ 2 } \\right) } }{ \\left( 1377.953 \\right) ^{ 0.75 } } \\\\&= 272.911  \\\\[10pt]\n",
+       "\\end{aligned}\n",
+       "\\]"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Latex object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%render\n",
+    "\n",
+    "Q = 8 * 4.4028675390625\n",
+    "H = 420 * M_TO_FT\n",
+    "N = 10400\n",
+    "\n",
+    "N_s_fu = (N * (Q) ** (1 / 2)) / H ** (0.75)"
    ]
   }
  ],
