Updated pump design point with turbine

--- a/docs/fluidics/turbine_design.ipynb
+++ b/docs/fluidics/turbine_design.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 381,
    "id": "a7480b50",
    "metadata": {},
    "outputs": [],
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 382,
    "id": "0e680f66",
    "metadata": {},
    "outputs": [
@@ -291,10 +291,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current Error: 3.181060187462447 %\n",
-      "Current Error: 0.24635674255579423 %\n",
-      "Current Error: 0.019607174479071454 %\n",
-      "Current Error: 0.0015571622838256695 %\n"
+      "Current Error: 3.182093153145577 %\n",
+      "Current Error: 0.24643788199926817 %\n",
+      "Current Error: 0.019613894199838198 %\n",
+      "Current Error: 0.0015577156557269858 %\n"
      ]
     }
    ],
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 383,
    "id": "e5642279",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Relative Error: 0.00 %\n"
+      "Relative Error: 0.02 %\n"
      ]
     }
    ],
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 384,
    "id": "31bafc1b",
    "metadata": {},
    "outputs": [],
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 385,
    "id": "98de5998",
    "metadata": {},
    "outputs": [
@@ -487,18 +487,18 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>853658.556771</td>\n",
-       "      <td>0.186426</td>\n",
-       "      <td>0.762287</td>\n",
-       "      <td>0.276188</td>\n",
-       "      <td>0.021644</td>\n",
-       "      <td>0.723812</td>\n",
+       "      <td>0.186439</td>\n",
+       "      <td>0.762294</td>\n",
+       "      <td>0.276176</td>\n",
+       "      <td>0.021646</td>\n",
+       "      <td>0.723824</td>\n",
        "      <td>0.85</td>\n",
-       "      <td>0.245754</td>\n",
+       "      <td>0.245755</td>\n",
        "      <td>0.004479</td>\n",
-       "      <td>0.1734</td>\n",
-       "      <td>11600.005438</td>\n",
-       "      <td>11.600005</td>\n",
-       "      <td>4.430876</td>\n",
+       "      <td>0.173404</td>\n",
+       "      <td>11601.826934</td>\n",
+       "      <td>11.601827</td>\n",
+       "      <td>4.431571</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -506,13 +506,13 @@
       ],
       "text/plain": [
        "              dh       eps     phi_r     phi_l  m_leakage     eta_l   phi  \\\n",
-       "0  853658.556771  0.186426  0.762287  0.276188   0.021644  0.723812  0.85   \n",
+       "0  853658.556771  0.186439  0.762294  0.276176   0.021646  0.723824  0.85   \n",
        "\n",
-       "      eta_h  zeta_eps   eta_o         Power  Power (kW)  Torque (Nm)  \n",
-       "0  0.245754  0.004479  0.1734  11600.005438   11.600005     4.430876  "
+       "      eta_h  zeta_eps     eta_o         Power  Power (kW)  Torque (Nm)  \n",
+       "0  0.245755  0.004479  0.173404  11601.826934   11.601827     4.431571  "
       ]
      },
-     "execution_count": 368,
+     "execution_count": 385,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 386,
    "id": "17ddc9af",
    "metadata": {},
    "outputs": [
@@ -590,19 +590,19 @@
        "      <td>1.923077</td>\n",
        "      <td>10.439256</td>\n",
        "      <td>7.716615</td>\n",
-       "      <td>4.078946</td>\n",
-       "      <td>3.335242</td>\n",
+       "      <td>4.07901</td>\n",
+       "      <td>3.335288</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    p_0       p_1       p_1o    p_1o_r    p_2o_r      p_2o\n",
-       "0  25.0  1.923077  10.439256  7.716615  4.078946  3.335242"
+       "    p_0       p_1       p_1o    p_1o_r   p_2o_r      p_2o\n",
+       "0  25.0  1.923077  10.439256  7.716615  4.07901  3.335288"
       ]
      },
-     "execution_count": 369,
+     "execution_count": 386,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 387,
    "id": "ac285f90",
    "metadata": {},
    "outputs": [
@@ -659,8 +659,8 @@
        "      <td>868.169413</td>\n",
        "      <td>592.819489</td>\n",
        "      <td>811.099475</td>\n",
-       "      <td>684.260987</td>\n",
-       "      <td>774.510904</td>\n",
+       "      <td>684.258589</td>\n",
+       "      <td>774.510587</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -668,10 +668,10 @@
       ],
       "text/plain": [
        "          t_0         t_1      t_1o_r         t_2        t_2o\n",
-       "0  868.169413  592.819489  811.099475  684.260987  774.510904"
+       "0  868.169413  592.819489  811.099475  684.258589  774.510587"
       ]
      },
-     "execution_count": 370,
+     "execution_count": 387,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 388,
    "id": "caeef526",
    "metadata": {},
    "outputs": [
@@ -745,9 +745,9 @@
        "      <td>0.007784</td>\n",
        "      <td>0.096196</td>\n",
        "      <td>0.111763</td>\n",
-       "      <td>0.59797</td>\n",
+       "      <td>0.597997</td>\n",
        "      <td>1.990783</td>\n",
-       "      <td>5.283509</td>\n",
+       "      <td>5.283866</td>\n",
        "      <td>3.518494</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -758,11 +758,11 @@
        "        D_m      A_1       A_0       s_c       s_b     D_hub     D_tip  \\\n",
        "0  0.103979  0.00011  0.000031  0.005284  0.007784  0.096196  0.111763   \n",
        "\n",
-       "        AR  Nozzle Throat (mm)  Nozzle Exit (mm)       eps  \n",
-       "0  0.59797            1.990783          5.283509  3.518494  "
+       "         AR  Nozzle Throat (mm)  Nozzle Exit (mm)       eps  \n",
+       "0  0.597997            1.990783          5.283866  3.518494  "
       ]
      },
-     "execution_count": 371,
+     "execution_count": 388,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 389,
    "id": "7ef77265",
    "metadata": {},
    "outputs": [
@@ -825,8 +825,8 @@
        "      <th>0</th>\n",
        "      <td>1.581765</td>\n",
        "      <td>1.457041</td>\n",
-       "      <td>1.110683</td>\n",
-       "      <td>0.905572</td>\n",
+       "      <td>1.110694</td>\n",
+       "      <td>0.905582</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -834,10 +834,10 @@
       ],
       "text/plain": [
        "   m_star_c1  m_star_w1  m_star_w2  m_star_c2\n",
-       "0   1.581765   1.457041   1.110683   0.905572"
+       "0   1.581765   1.457041   1.110694   0.905582"
       ]
      },
-     "execution_count": 372,
+     "execution_count": 389,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 390,
    "id": "71bae886",
    "metadata": {},
    "outputs": [
@@ -890,8 +890,8 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>67.409767</td>\n",
-       "      <td>89.594112</td>\n",
-       "      <td>56.453617</td>\n",
+       "      <td>89.594109</td>\n",
+       "      <td>56.453269</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -899,10 +899,10 @@
       ],
       "text/plain": [
        "      beta_1     beta_2    alpha_2\n",
-       "0  67.409767  89.594112  56.453617"
+       "0  67.409767  89.594109  56.453269"
       ]
      },
-     "execution_count": 373,
+     "execution_count": 390,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 391,
    "id": "a991ea29",
    "metadata": {},
    "outputs": [
@@ -964,9 +964,9 @@
        "      <td>1110.646935</td>\n",
        "      <td>988.872957</td>\n",
        "      <td>678.685921</td>\n",
-       "      <td>753.805099</td>\n",
-       "      <td>635.853327</td>\n",
-       "      <td>663.201574</td>\n",
+       "      <td>753.812224</td>\n",
+       "      <td>635.860658</td>\n",
+       "      <td>663.201438</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -974,13 +974,13 @@
       ],
       "text/plain": [
        "            u         c_1s          c_1         w_1    a_star_2         w_2  \\\n",
-       "0  130.664345  1306.643453  1110.646935  988.872957  678.685921  753.805099   \n",
+       "0  130.664345  1306.643453  1110.646935  988.872957  678.685921  753.812224   \n",
        "\n",
        "          c_2    a_star_3  \n",
-       "0  635.853327  663.201574  "
+       "0  635.860658  663.201438  "
       ]
      },
-     "execution_count": 374,
+     "execution_count": 391,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 392,
    "id": "ac87630f",
    "metadata": {},
    "outputs": [
@@ -1036,7 +1036,7 @@
        " 'M_e_margin': np.float64(0.1410810288639159)}"
       ]
      },
-     "execution_count": 375,
+     "execution_count": 392,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 393,
    "id": "5e821599",
    "metadata": {},
    "outputs": [
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 394,
    "id": "dfa83cbf",
    "metadata": {},
    "outputs": [
@@ -1114,7 +1114,7 @@
        "       177.77777778, 188.88888889, 200.        ])"
       ]
      },
-     "execution_count": 377,
+     "execution_count": 394,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 395,
    "id": "3f9f5f36",
    "metadata": {},
    "outputs": [
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 396,
    "id": "656aec2e",
    "metadata": {},
    "outputs": [
@@ -1191,17 +1191,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 397,
    "id": "c77d19fd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x14ce5f19290>]"
+       "[<matplotlib.lines.Line2D at 0x14cdf727e50>]"
       ]
      },
-     "execution_count": 380,
+     "execution_count": 397,
      "metadata": {},
      "output_type": "execute_result"
     },
