--- a/docs/fluidics/gas_generator.ipynb
+++ b/docs/fluidics/gas_generator.ipynb
@@ -252,18 +252,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\elias\\AppData\\Local\\Temp\\ipykernel_15640\\1637721477.py:21: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
-      "  T_add_can_array[i, k] = T_add_can\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "1188.1669745684123\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\elias\\AppData\\Local\\Temp\\ipykernel_10924\\1637721477.py:21: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  T_add_can_array[i, k] = T_add_can\n"
      ]
     }
    ],
@@ -410,7 +410,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2329d0f9210>]"
+       "[<matplotlib.lines.Line2D at 0x2da212ec190>]"
       ]
      },
      "execution_count": 8,
@@ -469,7 +469,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\elias\\AppData\\Local\\Temp\\ipykernel_15640\\3032516234.py:25: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "C:\\Users\\elias\\AppData\\Local\\Temp\\ipykernel_10924\\3032516234.py:25: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
       "  cp_cant_fz_array[i, k] = cp_cant_fz\n"
      ]
     }
@@ -515,7 +515,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x2329f59a5d0>"
+       "<matplotlib.lines.Line2D at 0x2da35e5f310>"
       ]
      },
      "execution_count": 10,
@@ -1218,7 +1218,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x2329f838f10>"
+       "<matplotlib.lines.Line2D at 0x2da35e301d0>"
       ]
      },
      "execution_count": 23,
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "id": "1a6b8ea5",
    "metadata": {},
    "outputs": [
@@ -1345,12 +1345,12 @@
        " 'R': array([504.56433872]),\n",
        " 'ox_stiffness': 1.0,\n",
        " 'fu_stiffness': 1.0,\n",
-       " 'm_dot_t': array([0.039124]),\n",
-       " 'm_dot_o': array([0.019562]),\n",
-       " 'm_dot_f': array([0.019562])}"
+       " 'm_dot_t': array([0.078376]),\n",
+       " 'm_dot_o': array([0.039188]),\n",
+       " 'm_dot_f': array([0.039188])}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1361,26 +1361,26 @@
     "\n",
     "GG.injector_cond(ox_in=Nitrous, fu_in=IPA, cdo=Cd_o, cdf=Cd_f)\n",
     "\n",
-    "GG.size_system(m_dot=39.124e-3, eta_c=eta_c)"
+    "GG.size_system(m_dot=78.376e-3, eta_c=eta_c)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "id": "8ea30729",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'CdA_ox': np.float64(3.1152954828258537e-07),\n",
-       " 'CdA_fu': np.float64(3.120448212732596e-07),\n",
-       " 'A_fu': np.float64(7.80112053183149e-07),\n",
-       " 'A_ox': np.float64(6.230590965651707e-07),\n",
-       " 'Acc': array([1.556368e-05])}"
+       "{'CdA_ox': np.float64(6.240783119363028e-07),\n",
+       " 'CdA_fu': np.float64(6.251105437100756e-07),\n",
+       " 'A_fu': np.float64(1.562776359275189e-06),\n",
+       " 'A_ox': np.float64(1.2481566238726056e-06),\n",
+       " 'Acc': array([3.11782788e-05])}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
