--- a/docs/fluidics/turbine_design.ipynb
+++ b/docs/fluidics/turbine_design.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "20a84c5b",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 5,
    "id": "a7480b50",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 6,
    "id": "8b47ad02",
    "metadata": {},
    "outputs": [],
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 7,
    "id": "d330bd1f",
    "metadata": {},
    "outputs": [],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 8,
    "id": "caa9128e",
    "metadata": {},
    "outputs": [],
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 9,
    "id": "f4ba80f6",
    "metadata": {},
    "outputs": [
@@ -271,8 +271,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Blade Chord Length: 13.01655835838762\n",
-      "Blade Spacing: 6.533217265525039\n"
+      "Blade Chord Length: 15.0\n",
+      "Blade Spacing: 5.0\n"
      ]
     }
    ],
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 10,
    "id": "0e680f66",
    "metadata": {},
    "outputs": [
@@ -291,10 +291,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current Error: 3.182093153145577 %\n",
-      "Current Error: 0.24643788199926817 %\n",
-      "Current Error: 0.019613894199838198 %\n",
-      "Current Error: 0.0015577156557269858 %\n"
+      "Current Error: 3.7708327629246052 %\n",
+      "Current Error: 0.29112388987247967 %\n",
+      "Current Error: 0.023212554118364627 %\n",
+      "Current Error: 0.00184615520353239 %\n"
      ]
     }
    ],
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 11,
    "id": "e5642279",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Relative Error: 0.02 %\n"
+      "Relative Error: -0.18 %\n"
      ]
     }
    ],
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 12,
    "id": "cbd08159",
    "metadata": {},
    "outputs": [
@@ -363,7 +363,7 @@
       "text/latex": [
        "\\[\n",
        "\\begin{aligned}\n",
-       "m_{dot_{t}} &= 78.365 \\; \\;\\textrm{(g/s)}\n",
+       "m_{dot_{t}} &= 78.376 \\; \\;\\textrm{(g/s)}\n",
        "\\end{aligned}\n",
        "\\]"
       ],
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 13,
    "id": "31bafc1b",
    "metadata": {},
    "outputs": [],
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 14,
    "id": "98de5998",
    "metadata": {},
    "outputs": [
@@ -488,17 +488,17 @@
        "      <th>0</th>\n",
        "      <td>853658.556771</td>\n",
        "      <td>0.186439</td>\n",
-       "      <td>0.762294</td>\n",
+       "      <td>0.759526</td>\n",
        "      <td>0.276176</td>\n",
        "      <td>0.021646</td>\n",
        "      <td>0.723824</td>\n",
        "      <td>0.85</td>\n",
-       "      <td>0.245755</td>\n",
-       "      <td>0.004479</td>\n",
-       "      <td>0.173404</td>\n",
-       "      <td>11601.826934</td>\n",
-       "      <td>11.601827</td>\n",
-       "      <td>4.431571</td>\n",
+       "      <td>0.245272</td>\n",
+       "      <td>0.00447</td>\n",
+       "      <td>0.173063</td>\n",
+       "      <td>11579.044152</td>\n",
+       "      <td>11.579044</td>\n",
+       "      <td>4.422869</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -506,13 +506,13 @@
       ],
       "text/plain": [
        "              dh       eps     phi_r     phi_l  m_leakage     eta_l   phi  \\\n",
-       "0  853658.556771  0.186439  0.762294  0.276176   0.021646  0.723824  0.85   \n",
+       "0  853658.556771  0.186439  0.759526  0.276176   0.021646  0.723824  0.85   \n",
        "\n",
        "      eta_h  zeta_eps     eta_o         Power  Power (kW)  Torque (Nm)  \n",
-       "0  0.245755  0.004479  0.173404  11601.826934   11.601827     4.431571  "
+       "0  0.245272   0.00447  0.173063  11579.044152   11.579044     4.422869  "
       ]
      },
-     "execution_count": 385,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 15,
    "id": "17ddc9af",
    "metadata": {},
    "outputs": [
@@ -590,19 +590,19 @@
        "      <td>1.923077</td>\n",
        "      <td>10.439256</td>\n",
        "      <td>7.716615</td>\n",
-       "      <td>4.07901</td>\n",
-       "      <td>3.335288</td>\n",
+       "      <td>4.054739</td>\n",
+       "      <td>3.318943</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    p_0       p_1       p_1o    p_1o_r   p_2o_r      p_2o\n",
-       "0  25.0  1.923077  10.439256  7.716615  4.07901  3.335288"
+       "    p_0       p_1       p_1o    p_1o_r    p_2o_r      p_2o\n",
+       "0  25.0  1.923077  10.439256  7.716615  4.054739  3.318943"
       ]
      },
-     "execution_count": 386,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 16,
    "id": "ac285f90",
    "metadata": {},
    "outputs": [
@@ -659,8 +659,8 @@
        "      <td>868.169413</td>\n",
        "      <td>592.819489</td>\n",
        "      <td>811.099475</td>\n",
-       "      <td>684.258589</td>\n",
-       "      <td>774.510587</td>\n",
+       "      <td>685.178032</td>\n",
+       "      <td>774.694507</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -668,10 +668,10 @@
       ],
       "text/plain": [
        "          t_0         t_1      t_1o_r         t_2        t_2o\n",
-       "0  868.169413  592.819489  811.099475  684.258589  774.510587"
+       "0  868.169413  592.819489  811.099475  685.178032  774.694507"
       ]
      },
-     "execution_count": 387,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 17,
    "id": "caeef526",
    "metadata": {},
    "outputs": [
@@ -745,7 +745,7 @@
        "      <td>0.007784</td>\n",
        "      <td>0.096196</td>\n",
        "      <td>0.111763</td>\n",
-       "      <td>0.597997</td>\n",
+       "      <td>0.518924</td>\n",
        "      <td>1.990783</td>\n",
        "      <td>5.283866</td>\n",
        "      <td>3.518494</td>\n",
@@ -759,10 +759,10 @@
        "0  0.103979  0.00011  0.000031  0.005284  0.007784  0.096196  0.111763   \n",
        "\n",
        "         AR  Nozzle Throat (mm)  Nozzle Exit (mm)       eps  \n",
-       "0  0.597997            1.990783          5.283866  3.518494  "
+       "0  0.518924            1.990783          5.283866  3.518494  "
       ]
      },
-     "execution_count": 388,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
