Performed tolerancing of turbine keyway

--- a/docs/mechanical/bearings.ipynb
+++ b/docs/mechanical/bearings.ipynb
@@ -1390,8 +1390,9 @@
     "| Dimensions       | Nominal | Tolerance | Max  | Min  |\n",
     "| ---------------- | ------- | --------- | ---- | ---- |\n",
     "| Insider Shoulder | 23.4    | +/- 0.2   | 23.6 | 23.2 |\n",
-    "| Outside Shoulder | 38.6    | +/- 0.2   | 38.8 | 38.4 |\n",
-    "| Shoulder Radius  | -       | -         | 0.6  | - |"
+    "| Outside Shoulder | 35      | +/- 0.2   | 35.2 | 34.8\n",
+    " |\n",
+    "| Shoulder Radius  | -       | -         | 0.6  | -    |"
    ]
   }
  ],
