Added Blisk File Considering tolerances

--- a/docs/fluidics/turbine_design.ipynb
+++ b/docs/fluidics/turbine_design.ipynb
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 19,
    "id": "a991ea29",
    "metadata": {},
    "outputs": [
@@ -964,9 +964,9 @@
        "      <td>1110.646935</td>\n",
        "      <td>988.872957</td>\n",
        "      <td>678.685921</td>\n",
-       "      <td>753.812224</td>\n",
-       "      <td>635.860658</td>\n",
-       "      <td>663.201438</td>\n",
+       "      <td>751.075141</td>\n",
+       "      <td>633.264334</td>\n",
+       "      <td>663.280178</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -974,13 +974,13 @@
       ],
       "text/plain": [
        "            u         c_1s          c_1         w_1    a_star_2         w_2  \\\n",
-       "0  130.664345  1306.643453  1110.646935  988.872957  678.685921  753.812224   \n",
+       "0  130.664345  1306.643453  1110.646935  988.872957  678.685921  751.075141   \n",
        "\n",
        "          c_2    a_star_3  \n",
-       "0  635.860658  663.201438  "
+       "0  633.264334  663.280178  "
       ]
      },
-     "execution_count": 391,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 20,
    "id": "ac87630f",
    "metadata": {},
    "outputs": [
@@ -1036,7 +1036,7 @@
        " 'M_e_margin': np.float64(0.1410810288639159)}"
       ]
      },
-     "execution_count": 392,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 29,
    "id": "5e821599",
    "metadata": {},
    "outputs": [
@@ -1085,7 +1085,11 @@
      "output_type": "stream",
      "text": [
       "Blade Spacing: 6.53 mm\n",
-      "Blade Chord Lenght: 13.02 mm\n"
+      "Blade Chord Length: 13.02 mm\n",
+      "0.01301655835838762\n",
+      "0.09619551651897765\n",
+      "0.11176324790134748\n",
+      "CNC Mill L/D Ratio: 1.19\n"
      ]
     }
    ],
@@ -1095,7 +1099,15 @@
     "t = profile_geometry[\"t\"]\n",
     "\n",
     "print(f\"Blade Spacing: {t*1e3:.2f} mm\")\n",
-    "print(f\"Blade Chord Lenght: {b*1e3:.2f} mm\")"
+    "print(f\"Blade Chord Length: {b*1e3:.2f} mm\")\n",
+    "\n",
+    "depth = (geometry_df[\"D_tip\"][0]/2 - geometry_df[\"D_hub\"][0]/2)\n",
+    "\n",
+    "print(b)\n",
+    "print(geometry_df[\"D_hub\"][0])\n",
+    "print(geometry_df[\"D_tip\"][0])\n",
+    "\n",
+    "print(f\"CNC Mill L/D Ratio: {depth/t:.2f}\")"
    ]
   },
   {
