Updated turbine design point to increase manufacturability.
- L/D assesment of passage is performed

--- a/docs/mechanical/orings.ipynb
+++ b/docs/mechanical/orings.ipynb
@@ -143,6 +143,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4e1d23b2",
+   "metadata": {},
+   "source": [
+    "We can balance out the tolerances of these O-Rings to be symmetric, to thus reduce the cost of the part accordingly:\n",
+    "\n",
+    "| Dimension | Max   | Min   | Nominal | Tolerance |\n",
+    "| --------- | ----- | ----- | ------- | --------- |\n",
+    "| OD        | 93.3  | 92.95 | 93.125  | +/- 0.175 |\n",
+    "| ID        | 86.05 | 85.70 | 85.875  | +/- 0.175 |\n",
+    "| Depth     | 2.2   | 2.05  | 2.125   | +/- 0.075 |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3ff25edd",
    "metadata": {},
    "source": [
