--- a/docs/fluidics/gas_generator.ipynb
+++ b/docs/fluidics/gas_generator.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ad31bead",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ed73f29a",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3fe5f7e0",
    "metadata": {},
    "outputs": [],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "727c43b7",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "567e0e46",
    "metadata": {},
    "outputs": [
@@ -262,7 +262,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\elias\\AppData\\Local\\Temp\\ipykernel_10924\\1637721477.py:21: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "C:\\Users\\elias\\AppData\\Local\\Temp\\ipykernel_21484\\1637721477.py:21: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
       "  T_add_can_array[i, k] = T_add_can\n"
      ]
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "dead9ef2",
    "metadata": {},
    "outputs": [
@@ -310,7 +310,7 @@
        "Text(0.5, 1.0, 'Variation of Combustion Temperature with MR')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "86ab7a43",
    "metadata": {},
    "outputs": [
@@ -403,17 +403,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "e09fddaa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2da212ec190>]"
+       "[<matplotlib.lines.Line2D at 0x1f337260e10>]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "aee575e0",
    "metadata": {},
    "outputs": [
@@ -469,7 +469,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\elias\\AppData\\Local\\Temp\\ipykernel_10924\\3032516234.py:25: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "C:\\Users\\elias\\AppData\\Local\\Temp\\ipykernel_21484\\3032516234.py:25: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
       "  cp_cant_fz_array[i, k] = cp_cant_fz\n"
      ]
     }
@@ -508,17 +508,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "ae86ee1a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x2da35e5f310>"
+       "<matplotlib.lines.Line2D at 0x1f3372ad350>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "59a5186b",
    "metadata": {},
    "outputs": [],
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "7f885f58",
    "metadata": {},
    "outputs": [
@@ -608,7 +608,7 @@
        "Text(0.5, 1.0, 'Specific Heat Ratio at varying MR')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "feab4358",
    "metadata": {},
    "outputs": [],
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "239a8706",
    "metadata": {},
    "outputs": [
@@ -698,7 +698,7 @@
        "Text(0.5, 1.0, 'Specific Gas Constant at varying MR')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "668541f5",
    "metadata": {},
    "outputs": [
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "53291c2e",
    "metadata": {},
    "outputs": [
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "10a605cc",
    "metadata": {},
    "outputs": [
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "6c1b53ab",
    "metadata": {},
    "outputs": [],
@@ -1056,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "322847d1",
    "metadata": {},
    "outputs": [
@@ -1076,7 +1076,7 @@
        " 'm_dot_f': array([0.014])}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "e3b0d979",
    "metadata": {},
    "outputs": [
@@ -1103,7 +1103,7 @@
        " 'Acc': array([1.11385093e-05])}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "2b1b4502",
    "metadata": {},
    "outputs": [],
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "110e4870",
    "metadata": {},
    "outputs": [
@@ -1172,7 +1172,7 @@
        "Text(0.5, 0, 'Fuel Inlet Pressure (Bar)')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1211,17 +1211,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "9056c5b4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x2da35e301d0>"
+       "<matplotlib.lines.Line2D at 0x1f339ace810>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1263,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "d56ea96a",
    "metadata": {},
    "outputs": [
@@ -1273,7 +1273,7 @@
        "Text(0.5, 0, 'Fuel Inlet Pressure (Bar)')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "id": "1a6b8ea5",
    "metadata": {},
    "outputs": [
@@ -1345,12 +1345,12 @@
        " 'R': array([504.56433872]),\n",
        " 'ox_stiffness': 1.0,\n",
        " 'fu_stiffness': 1.0,\n",
-       " 'm_dot_t': array([0.078376]),\n",
-       " 'm_dot_o': array([0.039188]),\n",
-       " 'm_dot_f': array([0.039188])}"
+       " 'm_dot_t': array([0.078053]),\n",
+       " 'm_dot_o': array([0.0390265]),\n",
+       " 'm_dot_f': array([0.0390265])}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1361,26 +1361,26 @@
     "\n",
     "GG.injector_cond(ox_in=Nitrous, fu_in=IPA, cdo=Cd_o, cdf=Cd_f)\n",
     "\n",
-    "GG.size_system(m_dot=78.376e-3, eta_c=eta_c)"
+    "GG.size_system(m_dot=78.053e-3, eta_c=eta_c)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "8ea30729",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'CdA_ox': np.float64(6.240783119363028e-07),\n",
-       " 'CdA_fu': np.float64(6.251105437100756e-07),\n",
-       " 'A_fu': np.float64(1.562776359275189e-06),\n",
-       " 'A_ox': np.float64(1.2481566238726056e-06),\n",
-       " 'Acc': array([3.11782788e-05])}"
+       "{'CdA_ox': np.float64(6.215063856482116e-07),\n",
+       " 'CdA_fu': np.float64(6.22534363430164e-07),\n",
+       " 'A_fu': np.float64(1.5563359085754099e-06),\n",
+       " 'A_ox': np.float64(1.2430127712964233e-06),\n",
+       " 'Acc': array([3.10497882e-05])}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
