Performed thermal analysis and increased nozzle count account for losses

--- a/docs/fluidics/gas_generator.ipynb
+++ b/docs/fluidics/gas_generator.ipynb
@@ -35,7 +35,9 @@
     "from turborocket.transient.start_up import GasGenerator\n",
     "from turborocket.combustion.comb_solver import CombustionCantera\n",
     "from turborocket.fluids.fluids import IncompressibleFluid\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import pprint"
    ]
   },
   {
@@ -252,18 +254,18 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\elias\\AppData\\Local\\Temp\\ipykernel_21648\\1637721477.py:21: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  T_add_can_array[i, k] = T_add_can\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "1188.1669745684123\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\elias\\AppData\\Local\\Temp\\ipykernel_21484\\1637721477.py:21: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
-      "  T_add_can_array[i, k] = T_add_can\n"
      ]
     }
    ],
@@ -410,7 +412,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1f337260e10>]"
+       "[<matplotlib.lines.Line2D at 0x1907d9392d0>]"
       ]
      },
      "execution_count": 9,
@@ -469,7 +471,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\elias\\AppData\\Local\\Temp\\ipykernel_21484\\3032516234.py:25: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "C:\\Users\\elias\\AppData\\Local\\Temp\\ipykernel_21648\\3032516234.py:25: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
       "  cp_cant_fz_array[i, k] = cp_cant_fz\n"
      ]
     }
@@ -515,7 +517,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x1f3372ad350>"
+       "<matplotlib.lines.Line2D at 0x19079beac10>"
       ]
      },
      "execution_count": 11,
@@ -1218,7 +1220,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x1f339ace810>"
+       "<matplotlib.lines.Line2D at 0x1907dbab990>"
       ]
      },
      "execution_count": 24,
@@ -1330,29 +1332,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "1a6b8ea5",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'P_cc': 2500000.0,\n",
-       " 'MR': np.float64(1.0),\n",
-       " 'T_o': array([868.17100688]),\n",
-       " 'Cp': array([2242.55942398]),\n",
-       " 'gamma': array([1.29031402]),\n",
-       " 'R': array([504.56433872]),\n",
-       " 'ox_stiffness': 1.0,\n",
-       " 'fu_stiffness': 1.0,\n",
-       " 'm_dot_t': array([0.078053]),\n",
-       " 'm_dot_o': array([0.0390265]),\n",
-       " 'm_dot_f': array([0.0390265])}"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Cp': array([2242.55942398]),\n",
+      " 'MR': np.float64(1.0),\n",
+      " 'P_cc': 2500000.0,\n",
+      " 'R': array([504.56433872]),\n",
+      " 'T_o': array([868.17100688]),\n",
+      " 'fu_stiffness': 1.0,\n",
+      " 'gamma': array([1.29031402]),\n",
+      " 'm_dot_f': array([0.044898]),\n",
+      " 'm_dot_o': array([0.044898]),\n",
+      " 'm_dot_t': array([0.089796]),\n",
+      " 'ox_stiffness': 1.0}\n"
+     ]
     }
    ],
    "source": [
@@ -1361,26 +1360,28 @@
     "\n",
     "GG.injector_cond(ox_in=Nitrous, fu_in=IPA, cdo=Cd_o, cdf=Cd_f)\n",
     "\n",
-    "GG.size_system(m_dot=78.053e-3, eta_c=eta_c)"
+    "array = GG.size_system(m_dot=89.796e-3, eta_c=eta_c)\n",
+    "\n",
+    "pprint.pprint(array)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "8ea30729",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'CdA_ox': np.float64(6.215063856482116e-07),\n",
-       " 'CdA_fu': np.float64(6.22534363430164e-07),\n",
-       " 'A_fu': np.float64(1.5563359085754099e-06),\n",
-       " 'A_ox': np.float64(1.2430127712964233e-06),\n",
-       " 'Acc': array([3.10497882e-05])}"
+       "{'CdA_ox': np.float64(7.150114333294917e-07),\n",
+       " 'CdA_fu': np.float64(7.161940693961155e-07),\n",
+       " 'A_fu': np.float64(1.7904851734902887e-06),\n",
+       " 'A_ox': np.float64(1.4300228666589834e-06),\n",
+       " 'Acc': array([3.57211994e-05])}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
